# mcz

./: .gitignore  README.md  pyproject.toml  test.txt
data/: Metadetect_BOSS_WZ_28august.pickle  bfd_masked_Boss_dhayaa_bin0_lesspoint.pickle  bfd_masked_Boss_dhayaa_bin1_lesspoint.pickle  bfd_masked_wide_WC_v2_dhayaa_bin2.pickle
doc/: mcz.tex
mcz/: L_WZ_data_only.ipynb  __init__.py  mcz.py  probz.py  wzprob.ipynb
mcz/data/: Maglim_BOSS_WZ_15oct.pickle  Metadetect_BOSS_WZ_15oct.pickle  Metadetect_BOSS_WZ_18sept.pickle  Metadetect_BOSS_WZ_29july.pickle  Metadetect_QSO_WZ_15oct.pickle  Metadetect_QSO_WZ_18sept.pickle  Metadetect_RM_WZ_15oct.pickle  Metadetect_RM_WZ_18sept.pickle  Metadetect_RM_WZ_28august.pickle  Metadetect_RM_WZ_29july.pickle  Metadetect_RM_WZ_6august.pickle  bfd_masked_Boss_dhayaa_bin2_lesspoint.pickle  bfd_masked_Boss_v2_dhayaa_bin3_lesspoint.pickle  bfd_masked_wide_WC_v2_dhayaa_bin0.pickle  bfd_masked_wide_WC_v2_dhayaa_bin1.pickle  bfd_masked_wide_WC_v2_dhayaa_bin3.pickle  ccl_wdm.npz  ccl_wm.npz
mcz/scripts/: ccl_wdm.py  wz_boyan.py  wz_giulia_bu.py  wz_qlna.py
scripts/: wz_boyan.py
